# akima_spline

./: .gitignore  Cargo.toml  README.md  README.template.md  README_local.md  build.rs
docs/: links.md  main.md
docs/create_doc_images/: Cargo.toml
docs/create_doc_images/src/: main.rs
docs/readme_parts/: end.md  extrap_1.svg.md  extrap_2.svg.md  links.md  no_extrap.svg.md
src/: lib.rs
tests/: basic.rs  serde.rs
