[package]
name = "akima_spline"
version = "0.1.0"
edition = "2024"
description = "Implementation of Akima splines with optional polynomial extrapolation."
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/akima_spline.git"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "docs/**",
    "tests/**",
    "build.rs",
]

[dependencies]
horner = "0.1.2"
approx = "0.5.1"
serde = { version = "1", features = ["derive", "rc"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
akima_spline = { path = ".", features = ["serde"] }
uom = {version = "0.36", default-features = false, features = ["f64", "si", "std"]}
serde_yaml = {version = "*"}
indoc = "1.0"

[package.metadata.docs.rs]
features = ["rayon", "serde"]