[package]
name = "akima_spline"
version = "0.1.0"
edition = "2024"
description = "A lightweight (only one dependency with 18 SLoC) implementation of a 1d Akima spline with optional smooth extrapolation and derivative calculation"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/akima_spline.git"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "docs/**",
    "tests/**",
]

[dependencies]
horner = "0.1.2"
serde = { version = "1", features = ["derive", "rc"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
approx = "0.5.1"
akima_spline = { path = ".", features = ["serde"] }
serde_yaml = {version = "0.8"}
indoc = "1.0"

[package.metadata.docs.rs]
features = ["rayon", "serde"]